[package]
name = "communism"
version = "0.1.0"
edition = "2021"
authors = ["Karl Marx", "Friedrich Engels"]
description = "From each according to his ability, to each according to his needs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/xnwp/communism/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
